[Rails] Set up CI

--- a/api/rails/config/database.yml
+++ b/api/rails/config/database.yml
@@ -12,9 +12,9 @@
 default: &default
   adapter: mysql2
   encoding: utf8
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: conduit
+  username: <%= ENV.fetch("CONDUIT_DATABASE_USERNAME") %>
   password: <%= ENV.fetch("CONDUIT_DATABASE_PASSWORD") %>
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   socket: /tmp/mysql.sock
 
 development:
