--- a/client/react/package.json
+++ b/client/react/package.json
@@ -25,6 +25,7 @@
   ],
   "devDependencies": {
     "@types/jest": "^24.0.12",
+    "@types/nock": "^10.0.1",
     "@types/node": "^11.13.9",
     "@types/react": "^16.8.15",
     "@types/react-dom": "^16.8.4",
@@ -33,7 +34,10 @@
     "eslint": "5.12.0",
     "eslint-config-prettier": "^4.2.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "jest-dom": "^3.1.4",
+    "nock": "^10.0.6",
     "prettier": "^1.17.0",
+    "react-testing-library": "^7.0.0",
     "typescript": "^3.4.5"
   }
 }
