--- a/client/react/.eslintrc.yml
+++ b/client/react/.eslintrc.yml
@@ -4,20 +4,27 @@ extends:
   - plugin:prettier/recommended
   - prettier/@typescript-eslint
 
-parser: '@typescript-eslint/parser'
-
 plugins:
-  - '@typescript-eslint'
   - prettier
 
 rules:
-  '@typescript-eslint/no-unused-vars': 2
   '@typescript-eslint/prefer-interface': 0
   '@typescript-eslint/explicit-function-return-type':
     - 2
     - allowTypedFunctionExpressions: true
+  no-unused-vars: 0
   prettier/prettier: 0
   react/jsx-sort-props:
     - 2
     - shorthandLast: true
     - ignoreCase: false
+
+overrides:
+  files:
+    - '**/*.ts'
+    - '**/*.tsx'
+  rules:
+    '@typescript-eslint/no-unused-vars':
+      - 2
+      - vars: all
+        args: all
