--- a/client/react/package.json
+++ b/client/react/package.json
@@ -13,7 +13,8 @@
     "react-scripts": "3.0.1",
     "reactstrap": "^8.0.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "typeface-source-sans-pro": "0.0.54"
   },
   "scripts": {
     "start": "BROWSER=none react-scripts start",
