--- a/api/rails/Dockerfile
+++ b/api/rails/Dockerfile
@@ -1,13 +1,13 @@
 FROM ruby:2.5.3-alpine
 
-ENV APP_ROOT /var/www/conduit
+ARG APP_ROOT=/var/www/conduit
 
 RUN apk --update --no-cache add build-base tzdata mariadb-dev netcat-openbsd curl \
   && curl https://raw.githubusercontent.com/eficode/wait-for/master/wait-for \
     -o /bin/wait-for \
   && chmod u+x /bin/wait-for
 
-RUN mkdir -p $APP_ROOT
+RUN mkdir -p $APP_ROOT/log
 
 WORKDIR $APP_ROOT
 
