--- a/api/rails/config/database.yml
+++ b/api/rails/config/database.yml
@@ -12,9 +12,10 @@
 default: &default
   adapter: mysql2
   encoding: utf8
-  username: <%= ENV.fetch("CONDUIT_DATABASE_USERNAME") %>
-  password: <%= ENV.fetch("CONDUIT_DATABASE_PASSWORD") %>
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  host: <%= ENV.fetch('CONDUIT_DATABASE_HOST', '127.0.0.1') %>
+  username: <%= ENV.fetch('CONDUIT_DATABASE_USERNAME') %>
+  password: <%= ENV.fetch('CONDUIT_DATABASE_PASSWORD') %>
+  pool: <%= ENV.fetch('RAILS_MAX_THREADS') { 5 } %>
   socket: /tmp/mysql.sock
 
 development:
