--- a/api/rails/docker/docker-compose.test.yml
+++ b/api/rails/docker/docker-compose.test.yml
@@ -2,9 +2,12 @@ version: '3'
 services:
   api:
     build:
+      context: .
       dockerfile: Dockerfile.test
     environment:
       CONDUIT_DATABASE: conduit_test
+    volumes:
+      - ../config/database.ci.yml:/var/www/conduit/config/database.yml
 
   db:
     environment:
