--- a/api/rails/docker/Dockerfile.test
+++ b/api/rails/docker/Dockerfile.test
@@ -1,11 +1,9 @@
 # vim: set ft=dockerfile :
-FROM conduit-base
+FROM conduit-rails
 
 WORKDIR /var/www/conduit
 
 ENV RAILS_ENV=test
-
-RUN rm config/database.yml && mv config/database.ci.yml config/database.yml
 
 CMD ["sh", "-c", \
      "echo 'Waiting for MySQL to be ready...'; \
