Organise docker testing setup

--- a/client/react/docker/docker-compose.test.yml
+++ b/client/react/docker/docker-compose.test.yml
@@ -2,6 +2,8 @@ version: '3'
 services:
   web:
     build:
-      dockerfile: ./Dockerfile.test
+      context: ../
+      dockerfile: ./docker/Dockerfile.test
     environment:
       CONDUIT_API_BASE_URL: http://test.conduit.com
+      CONDUIT_API_VERSION: v1
