--- a/api/rails/docker/Dockerfile.test
+++ b/api/rails/docker/Dockerfile.test
@@ -1,9 +1,11 @@
 # vim: set ft=dockerfile :
 FROM conduit-rails
 
-WORKDIR /var/www/conduit
+WORKDIR /opt/conduit
 
 ENV RAILS_ENV=test
+
+COPY config/database.ci.yml ./config/database.yml
 
 CMD ["sh", "-c", \
      "echo 'Waiting for MySQL to be ready...'; \
