--- a/api/rails/Gemfile
+++ b/api/rails/Gemfile
@@ -3,12 +3,13 @@ git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
 ruby '2.5.3'
 
-gem 'rails', '~> 5.2.2'
+gem 'bcrypt', '~> 3.1.12'
+gem 'bootsnap', '>= 1.1.0', require: false
+gem 'jwt'
 gem 'mysql2', '>= 0.4.4', '< 0.6.0'
 gem 'puma', '~> 3.11'
-gem 'bootsnap', '>= 1.1.0', require: false
-gem 'bcrypt', '~> 3.1.12'
-gem 'jwt'
+gem 'rack-cors'
+gem 'rails', '~> 5.2.2'
 
 group :development, :test do
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
