[React] Implement Login (#6)
* Use typescript

* Set up prettier and eslint

* Testing setup and custom jest matchers

* Upgrade react-scripts for using absolute imports

* Update test setup

* Add dependencies

* Render with Provider when testing

* Add api for login

* Implement login in the redux store

* Implement login page

* Add react-router

* Move env to config package and add routes config

* Create routes component with /login route

* Set up redux provider and app router

* Clean up

* Add bootstrap components

* Add primary font

* Styling

* Fix bad login request

* Refactor login test

* Handle authentication errors

* Styling

* Refactor and clean up

--- a/client/react/package.json
+++ b/client/react/package.json
@@ -3,23 +3,50 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
+    "formik": "^1.5.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-redux": "^7.0.3",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "3.0.1",
+    "reactstrap": "^8.0.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "typeface-source-sans-pro": "0.0.54"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "BROWSER=none react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "engines": {
+    "node": "11.14.0",
+    "npm": "6.9.0"
   },
   "browserslist": [
     ">0.2%",
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@types/jest": "^24.0.12",
+    "@types/nock": "^10.0.1",
+    "@types/node": "^11.13.9",
+    "@types/react": "^16.8.15",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-redux": "^7.0.9",
+    "@types/react-router-dom": "^4.3.3",
+    "@types/reactstrap": "^8.0.1",
+    "eslint-config-prettier": "^4.2.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "jest-dom": "^3.1.4",
+    "nock": "^10.0.6",
+    "prettier": "^1.17.0",
+    "react-testing-library": "^7.0.0",
+    "typescript": "^3.4.5"
+  }
 }
