--- a/api/rails/config/database.yml
+++ b/api/rails/config/database.yml
@@ -13,8 +13,8 @@ default: &default
   adapter: mysql2
   encoding: utf8
   host: <%= ENV.fetch('CONDUIT_DATABASE_HOST', '127.0.0.1') %>
-  username: <%= ENV.fetch('CONDUIT_DATABASE_USERNAME') %>
-  password: <%= ENV.fetch('CONDUIT_DATABASE_PASSWORD') %>
+  username: <%= ENV.fetch('CONDUIT_DATABASE_USERNAME') { nil } %>
+  password: <%= ENV.fetch('CONDUIT_DATABASE_PASSWORD') { nil } %>
   pool: <%= ENV.fetch('RAILS_MAX_THREADS') { 5 } %>
   socket: /tmp/mysql.sock
 
@@ -50,4 +50,5 @@ test:
 #
 production:
   <<: *default
-  database: conduit_prod
+  database: conduit
+  sslca: config/rds-ca-cert.pem
