Set up coverage reports for Rails

--- a/api/rails/Gemfile
+++ b/api/rails/Gemfile
@@ -26,6 +26,7 @@ group :development do
 end
 
 group :test do
+  gem 'codecov', require: false
   gem 'database_cleaner'
   gem 'factory_bot_rails'
   gem 'shoulda-matchers'
