--- a/client/react/package.json
+++ b/client/react/package.json
@@ -32,6 +32,19 @@
     "not ie <= 11",
     "not op_mini all"
   ],
+  "jest": {
+    "collectCoverageFrom": [
+      "src/packages/**/*.{ts,tsx}",
+      "!src/**/types.ts",
+      "!src/packages/config/*.*",
+      "!src/packages/utils/test/**/*.*",
+      "!src/*.{ts,tsx}",
+      "!<rootDir>/node_modules/"
+    ],
+    "coverageReporters": [
+      "lcov"
+    ]
+  },
   "devDependencies": {
     "@types/jest": "^24.0.12",
     "@types/nock": "^10.0.1",
