[CI/CD] Set Up Coverage (#11)
* Set up coverage reports for Rails

* Use proper env var for compose file

* Remove ls command

* Don't use Codecov gem

* Use correct flag for codecov

* Set up coverage for React

--- a/api/rails/Gemfile
+++ b/api/rails/Gemfile
@@ -26,6 +26,8 @@ group :development do
 end
 
 group :test do
+  gem 'simplecov'
+  gem 'simplecov-lcov'
   gem 'database_cleaner'
   gem 'factory_bot_rails'
   gem 'shoulda-matchers'
